--- a/oficina/templates/addclientes.html
+++ b/oficina/templates/addclientes.html
@@ -167,11 +167,11 @@
         outline: none;
         border: none;
     }
-    form h3{
-        font-size: 32px;
-        font-weight: 500;
-        line-height: 42px;
-        text-align: center;
+    form h3 {
+      font-size: 32px;
+      font-weight: 500;
+      line-height: 42px;
+      text-align: center;
     }
     
     label{
@@ -221,29 +221,20 @@
 
     <div class="nav-side">
       <h3 class="menudaoficina">Menu da Oficina</h3>
-      <button type="submit" class="veiculos">Veiculos</button>
-      <button type="submit" class="pecas">Peças</button>
-      <button type="submit" class="servico">Serviços</button>
-      <button type="submit" class="clientes">Clientes</button>
-      <button type="submit" class="os">Ordens<br>de<br>Serviço</button>
+      <a href="{% url 'home' %}"><button type="submit" class="veiculos">Veiculos</button></a>
+      <a href="{% url 'pecas' %}"><button type="submit" class="pecas">Peças</button></a>
+      <a href="{% url 'servicos' %}"><button type="submit" class="servico">Serviços</button></a>
+      <a href="{% url 'cliente' %}"><button type="submit" class="clientes">Clientes</button></a>
+      <a href="{% url 'home' %}"><button type="submit" class="os">Ordens<br>de<br>Serviço</button></a>
     </div>
-        <form method="post">
-            <h3>Adicionar Cliente</h3>
-            {% csrf_token %}
-            <label for="name">Nome</label>
-            <input type="text" placeholder="Nome do cliente" id="name" name="name">
-    
-            <label for="lastname">Sobrenome</label>
-            <input type="text" placeholder="Preço da peça" id="lastname" name="lastname">
 
-            <label for="adress">Endereço</label>
-            <input type="text" placeholder="Endereço do Cliente" id="adress" name="adress">
-
-            <label for="cellphone">Número de Telefone</label>
-            <input type="text" placeholder="Telefone do Cliente" id="cellphone" name="cellphone">
-    
-            <button type="submit"><a href="{% url 'pecas' %}" >Adicionar Peça</a></button>
-        </form>
-    </div>
+    <div class="clickable">
+      <form method="post" action="{% url 'addclientes' %}">
+        <h3>Adicionar Serviço</h3>
+          {% csrf_token %}
+          {{ form.as_p }}
+          <button type="submit">Salvar</button>
+      </form>
+  </div>
   </body>
 </html>
