--- a/oficina/templates/clientes.html
+++ b/oficina/templates/clientes.html
@@ -146,41 +146,43 @@
         background-color: #1845ad; /* Change the color on hover */
         transform: translate(-50%, -50%) scale(1.05); /* Add scale for a zoom effect on hover */
       }
-
+       
       .container {
         background-color: rgba(255, 255, 255, 0.12999999523162842);
-        height: 200px;
-        width: 317px;
+        width: 800px;
         border-radius: 10px;
         border: 1px solid #ffffff;
-        top: 104px;
-        left: 417px;
-        position: absolute;
+        margin-top: -800px;
+        margin-left: 500px;
+        position: relative;
         backdrop-filter: blur(30px);
+        display: flex;
+        flex-direction: row;
+        padding: 20px;
+        pointer-events: none;
       }
       
-      .text {
-        text-align: start;
-        color: #ffffff;
-        font-size: 20px;
-        font-family: Poppins;
-        left: 30px;
-        position: absolute;
-        border-style: hidden;
-        outline: none;
+
+      .car-info {
+        width: 45%;
+        margin: 10px;
+        box-sizing: border-box;
       }
-      
-      .text:nth-child(2) {
-        top: 50px; /* Espaçamento entre a primeira e a segunda linha */
+
+      .label {
+        font-weight: bold;
+        margin-right: 5px;
       }
-      
-      .text:nth-child(3) {
-        top: 100px; /* Espaçamento entre a segunda e a terceira linha */
+
+      .car-attribute {
+        color: #23a2f6;
       }
-      
-      .text:nth-child(4) {
-        top: 150px; /* Espaçamento entre a terceira e a quarta linha */
+
+      .container:hover {
+        background-color: rgba(255, 255, 255, 0.2);
+        transform: scale(1.05);
       }
+
       
       .container-add {
         background-color: rgba(255, 255, 255, 0.12999999523162842);
@@ -188,9 +190,9 @@
         width: 317px;
         border-radius: 10px;
         border: 1px solid #ffffff;
-        top: 104px;
-        left: 817px;
-        position: absolute;
+        position: fixed;
+        margin-top: -150px;
+        left: 1400px; 
         backdrop-filter: blur(30px);
         display: flex;
         flex-direction: column;
@@ -200,51 +202,61 @@
         transition: background-color 0.3s ease;
         animation: fadeIn 1s ease-in-out;
       }
-      
-      .container-add:hover {
-        background-color: rgba(255, 255, 255, 0.2); /* Mudar o fundo no hover */
-        transform: scale(1.05); /* Ampliar no hover */
-      }
-      
-      /* Keyframe animations */
-      @keyframes fadeIn {
-        from {
-          opacity: 0;
+          
+        .container-add:hover {
+          background-color: rgba(255, 255, 255, 0.2);
+          transform: scale(1.05);
         }
-        to {
-          opacity: 1;
-        }
-      }
+          
+          @keyframes fadeIn {
+              from {
+                  opacity: 0;
+              }
+              to {
+                  opacity: 1;
+              }
+          }
+          
+          .text-add {
+              text-align: center;
+              color: #ffffff;
+              vertical-align: text-top;
+              font-size: 20px;
+              font-family: Poppins;
+              line-height: 0px;
+              border-style: hidden;
+              outline: none;
+              margin-top: 20px;
+          }
+          
+          .fas.fa-plus {
+              font-size: 48px;
+              color: #ffffff;
+              margin-bottom: 30px;
+          }
+          
       
-      @keyframes float {
-        0%, 100% {
-          transform: translateY(0);
-        }
-        50% {
-          transform: translateY(-10px);
-        }
-      }
+            .car-info p {
+              margin: 10px 0;
+              font-weight: bold;
+              color: #fff;
+              font-family: Poppins;
+              
+            }
       
-      .text-add {
-        text-align: center;
-        color: #ffffff;
-        vertical-align: text-top;
-        font-size: 20px;
-        font-family: Poppins;
-        line-height: 0px;
-        border-style: hidden;
-        outline: none;
-        margin-top: 20px;
-      }
+            .car-info .label {
+              display: block;
+              margin-bottom: 5px;
+            }
       
-      .fas.fa-plus {
-        font-size: 48px;
-        color: #ffffff;
-        margin-bottom: 30px;
-      }
+            .car-info .car-attribute {
+              display: block;
+              font-weight: bold;
+              color: #fff;
+            }
     </style>
 
-    <title>Home Page</title>
+    <title>Clientes</title>
   </head>
   <body>
     <div class="background">
@@ -258,33 +270,48 @@
 
     <div class="nav-side">
       <h3 class="menudaoficina">Menu da Oficina</h3>
-      <button type="submit" class="veiculos">Veiculos</button>
-      <button type="submit" class="pecas">Peças</button>
-      <button type="submit" class="servico">Serviços</button>
-      <button type="submit" class="clientes">Clientes</button>
-      <button type="submit" class="os">Ordens<br>de<br>Serviço</button>
+      <a href="{% url 'home' %}"><button type="submit" class="veiculos">Veiculos</button></a>
+      <a href="{% url 'pecas' %}"><button type="submit" class="pecas">Peças</button>
+      <a href="{% url 'servicos' %}"><button type="submit" class="servico">Serviços</button>
+      <a href="{% url 'cliente' %}"><button type="submit" class="clientes">Clientes</button>
+      <a href="{% url 'home' %}"><button type="submit" class="os">Ordens<br>de<br>Serviço</button>
     </div>
 
     <div class="container">
-        <p class="text">Nome</p>
-        <p class="text">Sobrenome </p>
-        <p class="text">Endereço</p>
-        <p class="text">Número de Telefone</p>
-      </div>
-      
-      <a href="{% url 'addcar' %}" class="container-add">
+      {% if clientes %}
+        {% for cliente in clientes %}
+          <div class="car-info">
+            <p>
+              <span class="label" id="nome-label">Nome:</span>
+              <span class="car-attribute" id="nome">{{ cliente.nome }}</span>
+              <hr>
+            </p>
+            <p>
+              <span class="label" id="sobrenome-label">Sobrenome:</span>
+              <span class="car-attribute" id="sobrenome">{{ cliente.sobrenome }}</span>
+              <hr>
+            </p>
+            <p>
+              <span class="label" id="endereco-label">Endereço:</span>
+              <span class="car-attribute" id="endereco">{{ cliente.endereco }}</span>
+              <hr>
+            </p>
+            <p>
+              <span class="label" id="numero-label">Número de Telefone:</span>
+              <span class="car-attribute" id="numero">{{ cliente.numero }}</span>
+            </p>
+          </div>
+        {% endfor %}
+      {% else %}
+        <p style="color: #fff; text-align: center; font-family: Poppins; font-size: 20px;">
+          Nada cadastrado ainda!
+        </p>
+      {% endif %}
+    </div>
+
+    <a href="{% url 'addclientes' %}" class="container-add">
       <i class="fas fa-plus"></i>
       <p class="text-add">Adicionar</p>
     </a>
-
-    <script>
-        document.addEventListener("DOMContentLoaded", function () {
-            const shapes = document.querySelectorAll(".shape");
-    
-            shapes.forEach((shape, index) => {
-              shape.style.left = `${index * 100}px`; // Ajuste conforme necessário
-            });
-          });
-    </script>
   </body>
 </html>
