--- a/oficina/templates/servicos.html
+++ b/oficina/templates/servicos.html
@@ -7,77 +7,64 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;600&display=swap" rel="stylesheet" />
     <style media="screen">
       *,
-      *:before,
-      *:after {
-        padding: 0;
-        margin: 0;
-        box-sizing: border-box;
-      }
+    *:before,
+    *:after {
+      padding: 0;
+      margin: 0;
+      box-sizing: border-box;
+    }
 
-      body {
-        background-color: #00041B;
-      }
+    body {
+      background-color: #00041B;
+    }
 
-      .background {
-        width: 1200px;
-        height: 520px;
-        position: absolute;
-        transform: translate(-50%, -50%);
-        left: 50%;
-        top: 50%;
-      }
+    .background {
+      width: 100%;
+      height: 100vh;
+      position: fixed;
+      top: 0;
+      left: 0;
+      display: flex;
+      justify-content: space-around;
+      align-items: center;
+    }
 
-      .background .shape {
-        height: 200px;
-        width: 200px;
-        position: absolute;
-        border-radius: 50%;
-        animation: float 10s infinite alternate;
-        /* Floating animation */
-      }
+    .background .shape {
+      height: 200px;
+      width: 200px;
+      border-radius: 50%;
+      animation: float 10s infinite alternate;
+    }
 
-      @keyframes float {
-        to {
-          transform: translateY(-50px) translateX(-10px);
-          /* Adjust the floating distance */
-        }
+    @keyframes float {
+      to {
+        transform: translateY(-50px) translateX(-10px);
       }
+    }
 
-      .shape.shape1 {
-        background: linear-gradient(#1845ad, #23a2f6);
-        left: 40%;
-        top: -40%;
-      }
-      
-      .shape.shape2 {
-        background: linear-gradient(to right, #ff512f, #f09819);
-        left: 30%;
-        top: 80%;
-      }
-      
-      .shape.shape3 {
-        background: linear-gradient(#1845ad, #23a2f6);
-        right: 80%;
-        top: 0%;
-      }
-      
-      .shape.shape4 {
-        background: linear-gradient(to right, #ff512f, #f09819);
-        left: -11%;
-        bottom: -20%;
-      }
-      
-      .shape.shape5 {
-        background: linear-gradient(#1845ad, #23a2f6);
-        right: 0%;
-        bottom: 10%;
-      }
-      
-      .shape.shape6 {
-        background: linear-gradient(to right, #ff512f, #f09819);
-        right: 20%;
-        top: 10%;
-      }
+    .shape:nth-child(1) {
+      background: linear-gradient(#1845ad, #23a2f6);
+    }
+
+    .shape:nth-child(2) {
+      background: linear-gradient(to right, #ff512f, #f09819);
+    }
+
+    .shape:nth-child(3) {
+      background: linear-gradient(#1845ad, #23a2f6);
+    }
+
+    .shape:nth-child(4) {
+      background: linear-gradient(to right, #ff512f, #f09819);
+    }
+
+    .shape:nth-child(5) {
+      background: linear-gradient(#1845ad, #23a2f6);
+    }
+
+    .shape:nth-child(6) {
+      background: linear-gradient(to right, #ff512f, #f09819);
+    }
       
       .nav-side {
         background-color: rgba(255, 255, 255, 0.12999999523162842);
@@ -149,43 +136,40 @@
        
       .container {
         background-color: rgba(255, 255, 255, 0.12999999523162842);
-        height: 200px;
-        width: 317px;
+        width: 800px;
         border-radius: 10px;
         border: 1px solid #ffffff;
-        top: 104px;
-        left: 417px;
-        position: absolute;
+        margin-top: -800px;
+        margin-left: 500px;
+        position: relative;
         backdrop-filter: blur(30px);
+        display: flex;
+        flex-direction: row;
+        padding: 20px;
+        pointer-events: none;
+      }
+      
+
+      .car-info {
+        width: 45%;
+        margin: 10px;
+        box-sizing: border-box;
+      }
+
+      .label {
+        font-weight: bold;
+        margin-right: 5px;
+      }
+
+      .car-attribute {
+        color: #23a2f6;
       }
 
       .container:hover {
-        background-color: rgba(255, 255, 255, 0.2); /* Change background on hover */
-        transform: scale(1.05); /* Scale up on hover */
+        background-color: rgba(255, 255, 255, 0.2);
+        transform: scale(1.05);
       }
 
-      .text {
-        text-align: start;
-        color: #ffffff;
-        font-size: 20px;
-        font-family: Poppins;
-        left: 30px;
-        top: 30px;
-        width: 200px; /* Ajuste conforme necessário */
-        height: 54px;
-        position: absolute;
-        line-height: 27px;
-        border-style: hidden;
-        outline: none;
-      }
-      
-      .text-price {
-        top: 60px;
-      }
-
-      .text text-number {
-        top: 200px;
-      }
       
       .container-add {
         background-color: rgba(255, 255, 255, 0.12999999523162842);
@@ -193,9 +177,9 @@
         width: 317px;
         border-radius: 10px;
         border: 1px solid #ffffff;
-        top: 104px;
-        left: 817px;
-        position: absolute;
+        position: fixed;
+        margin-top: -150px;
+        left: 1400px; 
         backdrop-filter: blur(30px);
         display: flex;
         flex-direction: column;
@@ -205,90 +189,116 @@
         transition: background-color 0.3s ease;
         animation: fadeIn 1s ease-in-out;
       }
-  
-      .container-add:hover {
-        background-color: rgba(255, 255, 255, 0.2); /* Change background on hover */
-        transform: scale(1.05); /* Scale up on hover */
-      }
-  
-      /* Keyframe animations */
-      @keyframes fadeIn {
-        from {
-          opacity: 0;
+          
+        .container-add:hover {
+          background-color: rgba(255, 255, 255, 0.2);
+          transform: scale(1.05);
         }
-        to {
-          opacity: 1;
-        }
-      }
-  
-      @keyframes float {
-        0%, 100% {
-          transform: translateY(0);
-        }
-        50% {
-          transform: translateY(-10px);
-        }
-      }
+          
+          @keyframes fadeIn {
+              from {
+                  opacity: 0;
+              }
+              to {
+                  opacity: 1;
+              }
+          }
+          
+          .text-add {
+              text-align: center;
+              color: #ffffff;
+              vertical-align: text-top;
+              font-size: 20px;
+              font-family: Poppins;
+              line-height: 0px;
+              border-style: hidden;
+              outline: none;
+              margin-top: 20px;
+          }
+          
+          .fas.fa-plus {
+              font-size: 48px;
+              color: #ffffff;
+              margin-bottom: 30px;
+          }
+          
       
-      .text-add {
-        text-align: center;
-        color: #ffffff;
-        vertical-align: text-top;
-        font-size: 20px;
-        font-family: Poppins;
-        line-height: 0px;
-        border-style: hidden;
-        outline: none;
-        margin-top: 20px;
-      }
-
-      .fas.fa-plus {
-        font-size: 48px; 
-        color: #ffffff; 
-        margin-bottom: 30px;
-      }
+            .car-info p {
+              margin: 10px 0;
+              font-weight: bold;
+              color: #fff;
+              font-family: Poppins;
+              
+            }
+      
+            .car-info .label {
+              display: block;
+              margin-bottom: 5px;
+            }
+      
+            .car-info .car-attribute {
+              display: block;
+              font-weight: bold;
+              color: #fff;
+            }
     </style>
 
     <title>Home Page</title>
   </head>
   <body>
     <div class="background">
-        <div class="shape shape1"></div>
-        <div class="shape shape2"></div>
-        <div class="shape shape3"></div>
-        <div class="shape shape4"></div>
-        <div class="shape shape5"></div>
-        <div class="shape shape6"></div>        
+      <div class="shape"></div>
+      <div class="shape"></div>
+      <div class="shape"></div>
+      <div class="shape"></div>
+      <div class="shape"></div>
+      <div class="shape"></div>
     </div>
 
     <div class="nav-side">
       <h3 class="menudaoficina">Menu da Oficina</h3>
-      <button type="submit" class="veiculos">Veiculos</button>
-      <button type="submit" class="pecas">Peças</button>
-      <button type="submit" class="servico">Serviços</button>
-      <button type="submit" class="clientes">Clientes</button>
-      <button type="submit" class="os">Ordens<br>de<br>Serviço</button>
+      <a href="{% url 'home' %}"><button type="submit" class="veiculos">Veiculos</button></a>
+      <a href="{% url 'pecas' %}"><button type="submit" class="pecas">Peças</button>
+      <a href="{% url 'servicos' %}"><button type="submit" class="servico">Serviços</button>
+      <a href="{% url 'cliente' %}"><button type="submit" class="clientes">Clientes</button>
+      <a href="{% url 'home' %}"><button type="submit" class="os">Ordens<br>de<br>Serviço</button>
     </div>
 
     <div class="container">
-        <p class="text">Mão de obra</p>
-        <p class="text text-price">Preço: R$ 250 </p>
-        <p class="text text-">Número: 1</p>
-      </div>
-      
-      <a href="{% url 'addservicos' %}" class="container-add">
+      {% if servicos %}
+        {% for servico in servicos %}
+          <div class="car-info">
+            <p>
+              <span class="label" id="nome-label">Carro:</span>
+              <span class="car-attribute" id="nome">{{ servico.car }}</span>
+              <hr>
+            </p>
+            <p>
+              <span class="label" id="preco-label">Preço:</span>
+              <span class="car-attribute" id="preco">{{ servico.peca }}</span>
+              <hr>
+            </p>
+            <p>
+              <span class="label" id="preco-label">Data:</span>
+              <span class="car-attribute" id="preco">{{ servico.data_servico }}</span>
+              <hr>
+            </p>
+            <p>
+              <span class="label" id="preco-label">Obs:</span>
+              <span class="car-attribute" id="preco">{{ servico.observacoes }}</span>
+            </p>
+          </div>
+        {% endfor %}
+      {% else %}
+        <p style="color: #fff; text-align: center; font-family: Poppins; font-size: 20px;">
+          Nada cadastrado ainda!
+        </p>
+      {% endif %}
+    </div>
+
+    <a href="{% url 'addservicos' %}" class="container-add">
       <i class="fas fa-plus"></i>
       <p class="text-add">Adicionar</p>
     </a>
-
-    <script>
-        document.addEventListener("DOMContentLoaded", function () {
-            const shapes = document.querySelectorAll(".shape");
-    
-            shapes.forEach((shape, index) => {
-              shape.style.left = `${index * 100}px`; // Ajuste conforme necessário
-            });
-          });
-    </script>
   </body>
 </html>
